export_to_csv/export-csv-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: export-csv-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: export-csv
  template:
    metadata:
      labels:
        app: export-csv
    spec:
      containers:
      - name: export-csv
        image: 192.168.100.15:8000/export_to_csv
        ports:
        - containerPort: 5007
---
apiVersion: v1
kind: Service
metadata:
  name: export-csv-service
  labels:
    app: export-csv
spec:
  selector:
    app: export-csv
  ports:
    - protocol: TCP
      port: 5007
      targetPort: 5007
  type: ClusterIP
